# grpc-calculator

./: .gitignore  calculator.proto  calculator_pb2.py  calculator_pb2.pyi  calculator_pb2_grpc.py  client.py  main.py  makefile  pyproject.toml  server.py
